tests/requests/snapshots/can_auth_with_magic_link@auth_request.snap
---
source: tests/requests/auth.rs
assertion_line: 365
expression: magic_link_response.text()
---
"{\"token\":\"TOKEN\",\"id\":\"PID\",\"name\":\"user1\",\"isVerified\":false}"
