tests/requests/snapshots/can_login_without_verify@auth_request.snap
---
source: tests/requests/auth.rs
assertion_line: 188
expression: login_response.text()
---
"{\"token\":\"TOKEN\",\"id\":\"PID\",\"name\":\"loco\",\"isVerified\":false}"
