tests/requests/snapshots/login_with_invalid_password@auth_request.snap
---
source: tests/requests/auth.rs
expression: "(response.status_code(), response.text())"
---
(
    401,
    "{\"code\":\"INVALID_CREDENTIALS\",\"message\":\"邮箱或密码错误\"}",
)
