tests/requests/snapshots/resend_verification_user@auth_request.snap
---
source: tests/requests/auth.rs
expression: user
---
Model {
    created_at: DATE,
    updated_at: DATE,
    id: PID,
    tenant_id: PID,
    email: "test@loco.com",
    password: "PASSWORD",
    api_key: "lo-PID",
    name: "loco",
    status: "active",
    reset_token: None,
    reset_sent_at: None,
    email_verification_token: Some(
        "PID",
    ),
    email_verification_sent_at: Some(
        DATE,
    ),
    email_verified_at: None,
    magic_link_token: None,
    magic_link_expiration: None,
    avatar_file_id: None,
    password_changed_at: Some(
        DATE,
    ),
    preferred_locale: None,
}
